Changed About section content in index.html and updated site name from DevFolio to PortFolio.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">DevFolio</h1>
+        <h1 class="sitename">PortFolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -134,20 +134,19 @@
             <div class="about-me">
               <h4>About me</h4>
               <p>
-                Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                imperdiet et, porttitor
-                at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                porttitor accumsan tincidunt.
+                AI Product Manager having more than 10 years of experiance specializing in pioneering innovation at the intersection of advanced AI and financial services.
+
               </p>
               <p>
-                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                porttitor volutpat. Vestibulum
-                ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                Demonstrated leadership in the end-to-end delivery of Proof of Concepts (POCs) and scalable GenAI deployments for top banking, insurance, and fintech clients. Expert
+                in implementing Agentic AI frameworks—including GenAI solutions with fine-tuning, Retrieval Augmented Generation (RAG), and custom model
+                engineering—to achieve industry-leading accuracy, domain relevance, and operational intelligence.
               </p>
               <p>
-                Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                Nulla porttitor accumsan
-                tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                Proficient across the complete AI product lifecycle,
+                from ideation and feasibility to deployment, monitoring, and iterative optimization. Champion of AI governance: consistently establish robust
+                frameworks for ethical AI, regulatory compliance, and risk management in highly regulated sectors. Adept at aligning technical advancement with
+                business strategy to drive efficiency, customer engagement, and sustained competitive advantage.
               </p>
             </div>
           </div>
