Updated the resume  and resume link in index.html

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#portfolio">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -135,7 +135,6 @@
               <h4>About me</h4>
               <p>
                 AI Product Manager having more than 10 years of experiance specializing in pioneering innovation at the intersection of advanced AI and financial services.
-
               </p>
               <p>
                 Demonstrated leadership in the end-to-end delivery of Proof of Concepts (POCs) and scalable GenAI deployments for top banking, insurance, and fintech clients. Expert
@@ -162,7 +161,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Experienced AI Product Manager specializing in Generative AI and Financial Services</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -170,31 +169,47 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Shubham Raj Gupta</h4>
+              <p><em>Experienced AI Product Manager specializing in pioneering innovation at the intersection of advanced AI and financial services. Demonstrated leadership in the end-to-end delivery of Proof of Concepts (POCs) and scalable GenAI deployments for top banking, insurance, and fintech clients.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Gurgaon, India</li>
+                <li>(+91) 8978141990</li>
+                <li>shubhamprof2304@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
+            <h3 class="resume-title">Recent Projects</h3>
+
+            <div class="resume-item">
+              <h4>Generative AI</h4>
+              <ul>
+                <li>Successfully launched a generative AI application named 'Onboarding Assist', which automates the customer documents ingestion, validates it and generates a structured report for further analysis.</li>
+                <li>RAG with SQL - Production grade product ready for generating SQL queries, plots &amp; insights with Natural Language Questions. An accuracy of more than 80% for SQL queries is achieved with complex level queries.</li>
+                <li>Finetuning the opensource LLM for custom applications. Finetuning Bi-Encoders &amp; Cross-Encoders Models to fit in a custom application.</li>
+              </ul>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Machine Learning / NLP</h4>
+              <ul>
+                <li>Created an unsupervised alert system targeting the highly problematic benefit from customer chats for multiple benefits in Credit Card. For this we used NLP Data Modelling technique called BERT, NMF (Non-negative Matrix Factorization) and represented with Open AI GPT-3.5 turbo.</li>
+              </ul>
+            </div><!-- End Resume Item -->
+
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Executive PGP in Data Science</h4>
+              <h5>May 2021 - July 2022</h5>
+              <p><em>IIIT Bangalore, India</em></p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>M. Tech. Computer Science</h4>
+              <h5>Aug 2012 - July 2014</h5>
+              <p><em>NIT Warangal, India</em></p>
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -202,26 +217,27 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Project Manager</h4>
+              <h5>Oct 2023 - Present</h5>
+              <p><em>EXL Services (GenAI Solutions), Gurgaon, India</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Engineered the Agentic Framework 'Onboarding Assist' using NLP, Python, &amp; LLMs, accelerating customer onboarding by up to 70%</li>
+                <li>Optimized open-source LLMs (~3B &amp; 7B parameters) for entity extraction using Supervised Fine Tuning &amp; Policy optimization, achieving equivalent output quality to GPT-4 at one-tenth the cost</li>
+                <li>Enhanced efficiency by implementing RAG architectures, resulting in improved performance metrics with the utilization of custom logic and Langchain &amp; Llamaindex frameworks</li>
+                <li>Refined Bi-Encoder &amp; Cross-Encoder models using sentence similarity synthetic datasets, achieving a 30% increase in column selection accuracy</li>
+                <li>Presented and demonstrated GenAI applications to 20+ clients, showcasing capabilities and potential</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Analytics Manager</h4>
+              <h5>Jan 2023 - Sep 2023</h5>
+              <p><em>EXL Services (GenAI Solutions), Gurgaon, India</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Automated data pipelines for LLM, Encoder, &amp; NLP models using Python, SQL, &amp; Airflow</li>
+                <li>Trained and mentored data scientists, analysts, and stakeholders in data preparation for GenAI product development</li>
+                <li>Assisted VPs in delivering compelling demos for 10+ Generative AI Applications, enhancing client engagement</li>
+                <li>Implemented a GenAI-powered Complaint Analytics application with advanced features including topic modeling, emotion and sentiment detection</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
